<resources>
    <string name="app_name">日日好蛋</string>
    <string name="eorder_app_name">日日好蛋</string>

    <!-- basic -->
    <string name="store_name">日日好蛋</string>
    <string name="setting">設定</string>
    <string name="name">姓名</string>
    <string name="gender">性別</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="birth">生日</string>
    <string name="mail">信箱</string>
    <string name="receiveaddress">收件地址</string>
    <string name="point">點數</string>
    <string name="cellphone">手機號碼</string>
    <string name="prepaid_amount">微笑幣</string>
    <string name="login">登入</string>
    <string name="password">密碼</string>
    <string name="repassword">確認密碼</string>
    <string name="invitation_code">邀請碼</string>
    <string name="carrier_no">手機載具條碼</string>
    <string name="recommend_member">推薦人</string>
    <string name="dialog_hint">提醒</string>
    <string name="terms_of_use">紅利點數與購物規範</string>
    <string name="forget_password">忘記密碼</string>
    <string name="verify_code">驗證碼</string>
    <string name="send">送出</string>
    <string name="register">註冊</string>
    <string name="member_terms_of_use">會員使用條款</string>
    <string name="sms_verify">簡訊驗證</string>
    <string name="otp">OTP</string>
    <string name="resend">重新發送</string>
    <string name="coupon">優惠券</string>
    <string name="privacy_policy">會員公告與隱私權條款</string>
    <string name="logout">登出</string>
    <string name="store_title">商品清單</string>
    <string name="force_logout_message">連線逾時 請重新登入</string>
    <string name="close_hint">是否要確定離開?</string>
    <string name="select_customer">選擇商家</string>
    <string name="product_desc">商品內容</string>

    <!--Dialog message-->
    <string name="verify">確認</string>
    <string name="re_verify">重選</string>
    <string name="cancel">取消</string>
    <string name="OK">OK</string>
    <string name="retry_verify">重試驗證</string>
    <string name="give_up">稍後回來</string>
    <string name="regist_no_pos_member_id">很抱歉，目前網路不穩定，帳號驗證失敗，請重試驗證或等待10分鐘後再重試。若持續發生錯誤，請通知服務人員，謝謝。</string>

    <!-- title -->
    <string name="title_member_gift">邀請好友</string>
    <string name="title_member_info_change">修改會員資料</string>
    <string name="title_password_change">修改密碼</string>

    <!-- login -->
    <string name="welcome_back">全部商家</string>
    <string name="login_title_hint">已有實體會員卡？首次請用忘記密碼登入</string>
    <string name="hint_cellphone">請輸入您的手機號碼</string>
    <string name="hint_password">請輸入您的密碼</string>
    <string name="login_forget_password">忘記密碼?</string>
    <string name="check_login_remember">勾選後，保持30天登入狀態</string>
    <string name="register_member">註冊會員</string>
    <string name="forget_password_error_hint">請先輸入手機號碼再按忘記密碼</string>
    <string name="dialog_empty_phone">電話號碼不得為空</string>
    <string name="dialog_empty_password">密碼不得為空</string>
    <string name="login_terms_of_use">使用者條款與須知</string>
    <string name="set_password">設定密碼</string>
    <string name="hint_input_password">請輸入6~12位英數密碼</string>
    <string name="hint_check_password">確認新密碼</string>
    <string name="hint_input_invitation_code">請輸入好友邀請碼</string>
    <string name="dialog_empty_customer_no">商家代號不得為空</string>
    <string name="dialog_error_customer">無此商家</string>
    <string name="dialog_add_love_customer">已成功將商家加入到最愛</string>
    <string name="dialog_love_customer_exist">我的最愛已存在此商家</string>
    <string name="dialog_customer_no_online">此商家目前無開放APP購物</string>

    <!-- forget password -->
    <string name="forget_password_hint">請重新設定您的新密碼</string>
    <string name="hint_verify_code">請輸入驗證碼</string>
    <string name="empty_verify_code">驗證碼尚未填寫</string>
    <string name="password_format_error">密碼格式不符</string>
    <string name="password_check_format_error">密碼確認格式不符</string>
    <string name="password_different">密碼不一致</string>

    <!-- change password -->
    <string name="exist_password">舊密碼</string>
    <string name="hint_exist_password">請輸入舊密碼</string>
    <string name="exist_password_format_error">舊密碼格式不符</string>
    <string name="new_password_format_error">新密碼格式不符</string>
    <string name="new_password_check_format_error">密碼確認格式不符</string>
    <string name="new_password_not_match">兩組密碼不一致</string>
    <string name="change_password_success">修改密碼成功，請重新登入</string>

    <!-- register -->
    <string name="register_city">請選擇城市</string>
    <string name="register_area">請選擇地區</string>
    <string name="register_address">請輸入地址</string>
    <string name="register_title_hint">歡迎加入會員</string>
    <string name="hint_name">請輸入您的姓名</string>
    <string name="hint_birthday">請輸入生日</string>
    <string name="hint_email">請輸入E-MAIL</string>
    <string name="hint_carrier_no">請輸入載具條碼</string>
    <string name="hint_address">地址</string>
    <string name="hint_register_cellphone">請輸入手機號碼（登入帳號）</string>
    <string name="register_agree_terms_of_use">我同意以此資料註冊會員，並同意會員使用條款</string>
    <string name="phone_format_error">手機格式不符</string>
    <string name="email_format_error">Email格式不符</string>
    <string name="name_empty">姓名尚未填寫</string>
    <string name="address_empty">地址尚未填寫</string>
    <string name="birth_empty">生日尚未選取</string>
    <string name="gender_empty">性別尚未選取</string>
    <string name="not_yet_check_terms_of_use">請勾選同意會員使用條款</string>
    <string name="email_empty">Email尚未填寫</string>
    <string name="delete_member">帳號刪除後，我們將不再保留您的個人資料、點數及票券，亦無法為您恢復帳號，請務必再次確認</string>
    <string name="logout_success">退出成功</string>
    <!-- verify code -->
    <string name="verify_title">請輸入簡訊驗證碼</string>
    <string name="not_get_verify_code">尚未收到簡訊認證嗎?</string>
    <string name="verify_code_wrong">簡訊驗證碼輸入錯誤</string>
    <string name="verify_code_resend">簡訊驗證碼已重新發送</string>

    <!-- notification control -->
    <string name="notification_control_title">開啟通知</string>
    <string name="notification_control_hint">您好! 歡迎使用\n微笑運動用品會員APP\n開啟通知可以獲得</string>
    <string name="notification_item">商品優惠通知</string>
    <string name="notification_coupon">限時優惠COUPON</string>
    <string name="notification_package">商品出貨狀態</string>
    <string name="notification_message">請問是否要開啟通知?</string>

    <!-- business -->
    <string name="hint_business_code">請輸入企業優惠碼</string>

    <!-- lot -->
    <string name="hint_cif_code">請輸入身分證字號</string>
    <string name="main_type_name">商成</string>
    <string name="lot_prod_name">商品名稱</string>
    <string name="lot_spec_name">規格名稱</string>
    <string name="lot_prod_id">商品編號</string>
    <string name="hint_product">請先選擇商品</string>
    <string name="member_group_error">很抱歉，本活動限定金卡會員才能參加</string>
    <string name="check_join">請再次確認選擇的商品無誤：%s 商品，%s 尺寸。</string>
    <string name="cif_empty">請完整填寫身分證字號，以完成投籤</string>
    <string name="cif_error">請輸入正確身分證字號格式</string>
    <string name="check_prod_spec">請選擇商品、尺寸</string>
    <string name="repeat_join">您已投籤過，不需重複操作。</string>
    <string name="sys_error">系統未回應，請稍後重試</string>
    <string name="failed_drawlots">投籤失敗</string>
    <string name="success_drawlots">投籤成功！</string>



    <!-- bottomNavigation -->
    <string name="tab_index">首頁</string>
    <string name="tab_news">最新消息</string>
    <string name="tab_shop">福利站</string>
    <string name="tab_ticket">買好蛋</string>
    <string name="tab_lot">抽獎抽籤</string>
    <string name="tab_member_card">會員卡資料</string>
    <string name="tab_business_coupon">企業優惠碼</string>
    <string name="tab_purchase">買好蛋</string>
    <string name="tab_store">何處領</string>
    <string name="tab_member_info">會員中心</string>
    <string name="tab_donate">領好蛋</string>
    <string name="tab_customer">選擇商家</string>
    <string name="tab_scanner">掃描</string>
    <string name="tab_often">常用資料</string>

    <string name="tab_main">首頁</string>
    <string name="tab_shopping_cart">購物車</string>

    <string name="NEW">最新上架時間</string>
    <string name="OLD">上架時間舊到新</string>
    <string name="EXPENSIVE">價錢由高到低</string>
    <string name="CHEAP">價錢由低到高</string>
    <string name="NAME">名稱排列</string>

    <string name="product_no_result">無結果</string>

    <!-- store -->
    <string name="store_chiayi">南部</string>
    <string name="store_taichung">中部</string>
    <string name="store">據點</string>
    <string name="department">百貨專櫃</string>
    <string name="sell_center">暢貨中心</string>
    <string name="store_distance">( %d公里 )</string>

    <!-- member point -->
    <string name="total_point">目前累積總點數</string>
    <string name="expire_date">%s即將到期點數%s點</string>
    <string name="point_record">2個月點數使用紀錄</string>
    <string name="point_add">%s點</string>

    <!-- member center -->
    <string name="member_setting">會員設定</string>
    <string name="modify_member_info">修改會員資料</string>
    <string name="change_password">修改密碼</string>
    <string name="account_info">帳戶資訊</string>
    <string name="trans_record">交易紀錄</string>
    <string name="my_point">我的點數</string>
    <string name="mail_file">訊息夾</string>
    <string name="smile_point">我的微笑幣</string>
    <string name="message_list">客服中心</string>
    <string name="social_center">社群中心</string>
    <string name="share_app">分享APP</string>
    <string name="share_text">歡迎下載 "微笑運動用品會員APP" ,  享有會員獨家優惠與最新資訊！ 下載 iPhone版： http://bit.ly/微笑運動APP_ios  下載 Android版： http://bit.ly/微笑運動APP_android</string>
    <string name="customer_center">客服中心</string>
    <string name="contact_us">聯絡我們</string>

    <!-- trans record -->
    <string name="empty_location">目前無開放APP線上購物</string>
    <string name="empty_order">您目前沒有任何訂單</string>
    <string name="empty_message">目前沒有未讀訊息</string>
    <string name="go_home">返回首頁</string>
    <string name="keep_shopping">繼續購物</string>
    <string name="order_waiting_pay">待付款</string>
    <string name="order_waiting_ship">待出貨</string>
    <string name="order_finish">交易完成</string>
    <string name="order_finish_api">完成出貨</string>
    <string name="order_cancel">取消訂單</string>
    <string name="order_returning">退貨中</string>
    <string name="order_exchanging">換貨中</string>
    <string name="order_return_finish">已退貨</string>
    <string name="order_exchange_finish">已換貨</string>
    <string name="order_no">訂單編號 %s</string>
    <string name="order_time">購買日期 %s</string>
    <string name="order_price">付款金額 $%d</string>
    <string name="order_total">共%d樣商品</string>
    <string name="order_special">(企業專區)</string>
    <string name="order_return">退貨</string>
    <string name="order_exchange">換貨</string>
    <string name="item_no">編號 %d</string>
    <string name="item_total_price">小計 $%d</string>

    <!-- exchange order -->
    <string name="exchange_title">換貨清單</string>
    <string name="return_title">退貨清單</string>
    <string name="empty_order_hint">請選擇至少一件商品</string>
    <string name="exchange_info_input">換貨資料填寫</string>
    <string name="name_must">*姓名</string>
    <string name="exchange_name_hint">請輸入姓名</string>
    <string name="address_must">*地址</string>
    <string name="exchange_address_hint">請輸入地址</string>
    <string name="cellphone_must">*手機號碼</string>
    <string name="exchange_cellphone_hint">請輸入收件人的手機號碼</string>
    <string name="email_must">*E-mail</string>
    <string name="exchange_email_hint">請輸入收件人的E-MAIL</string>
    <string name="exchange_confirm">確定換貨</string>
    <string name="return_confirm">確定退貨</string>
    <string name="exchange_apply">換貨申請</string>
    <string name="return_apply">退貨申請</string>
    <string name="exchange_apply_title">申請換貨</string>
    <string name="return_apply_title">申請退貨</string>

    <!-- member info -->
    <string name="type_vip">金卡會員</string>
    <string name="type_normal">一般會員</string>

    <!-- message list -->
    <string name="enter_message_hint">請輸入留言</string>

<!--    push-->
    <string name="default_notification_channel_id">1</string>
</resources>
