<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_order_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_down_grey" />

        <ImageView
            android:id="@+id/img_item"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/greyDark" />

        <TextView
            android:id="@+id/tv_order_no"
            style="@style/fontBoldTw.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/order_no"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@id/tv_order_time"
            app:layout_constraintStart_toEndOf="@id/img_item"
            app:layout_constraintTop_toTopOf="@id/img_item"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_order_time"
            style="@style/fontBoldTw.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/order_time"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@id/tv_order_price"
            app:layout_constraintStart_toStartOf="@id/tv_order_no"
            app:layout_constraintTop_toBottomOf="@id/tv_order_no" />

        <TextView
            android:id="@+id/tv_order_price"
            style="@style/fontBoldTw.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/order_price"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@id/img_item"
            app:layout_constraintStart_toStartOf="@id/tv_order_no"
            app:layout_constraintTop_toBottomOf="@id/tv_order_time" />

        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/greyLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_item" />

        <TextView
            android:id="@+id/tv_order_count"
            style="@style/fontDefaultTw.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_total"
            android:textColor="@color/greyText"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/img_item"
            app:layout_constraintTop_toBottomOf="@id/view_line" />

        <TextView
            android:id="@+id/tv_order_extra"
            style="@style/fontBoldTw.Orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/order_special"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_order_count"
            app:layout_constraintStart_toEndOf="@id/tv_order_count"
            app:layout_constraintTop_toTopOf="@id/tv_order_count" />

        <Button
            android:id="@+id/btn_order_exchange"
            style="@style/fontDefaultTw.White"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:background="@color/orangeText"
            android:text="@string/order_exchange"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line" />

        <Button
            android:id="@+id/btn_order_return"
            style="@style/fontDefaultTw.Orange"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rec_stroke_green_button"
            android:text="@string/order_return"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_order_exchange"
            app:layout_constraintEnd_toStartOf="@id/btn_order_exchange"
            app:layout_constraintTop_toTopOf="@id/btn_order_exchange" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="btn_order_exchange,btn_order_return" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>